Fixed backlog visualization on firefox.

--- a/app/less/greenmine.less
+++ b/app/less/greenmine.less
@@ -263,9 +263,12 @@
 
                 .row-item {
                     display: -webkit-box;
+                    display: -moz-box;
                     -webkit-box-orient: horizontal;
+                    -moz-box-orient: horizontal;
                     border-bottom: 1px solid #666;
                     padding: 2px;
+                    width: 100%;
 
                     .row-label {
                         font-size: 18px;
@@ -488,12 +491,16 @@
         .us-table-list {
             .flex-header {
                 display: -webkit-box;
+                display: -moz-box;
                 -webkit-box-orient: horizontal;
+                -moz-box-orient: horizontal;
                 border-bottom: 2px solid #666666;
+                width: 100%;
             }
 
             .flex-header > div:nth-child(1) {
                 -webkit-box-flex: 1;
+                -moz-box-flex: 1;
             }
             .flex-header > div {
                 padding: 5px;
@@ -503,7 +510,9 @@
                 min-height: 40px;
                 .us-item {
                     display: -webkit-box;
+                    display: -moz-box;
                     -webkit-box-orient: horizontal;
+                    -moz-box-orient: horizontal;
                     margin-top: 2px;
                     margin-bottom: 2px;
                     border-bottom: 1px solid #eee;
@@ -511,9 +520,11 @@
                         background-color: #f9f9f9;
                         border-bottom: 1px solid #f9f9f9;
                     }
+                    width: 100%;
                 }
                 .us-item > div:nth-child(1) {
                     -webkit-box-flex: 1;
+                    -moz-box-flex: 1;
                 }
                 .us-item > div {
                     padding: 5px;
@@ -533,7 +544,7 @@
             }
 
             .us-options {
-                width: 100px;
+                width: 120px;
             }
         }
     }
@@ -707,11 +718,15 @@
                                 min-height: 20px;
                                 .us-item {
                                     display: -webkit-box;
+                                    display: -moz-box;
                                     -webkit-box-orient: horizontal;
+                                    -moz-box-orient: horizontal;
                                     border-bottom: 1px solid #c9c9c9;
+                                    width: 100%;
                                 }
                                 .us-item > div:nth-child(1) {
                                     -webkit-box-flex: 1;
+                                    -moz-box-flex: 1;
                                 }
                                 .us-item > div {
                                     padding: 5px;
